--- a/index.html
+++ b/index.html
@@ -42,147 +42,156 @@
       <div class="border-line"></div>
 
       <div class="section-2">
-        <h2>Contact Information</h2>
+        <!-- <h2>Contact Information</h2> -->
 
         <form>
-          <div class="form-top">
-            <div class="input-section">
-              <label for="full-name">Full Name</label>
-              <input
-                type="text"
-                id="full-name"
-                name="full-name"
-                placeholder="Required"
-              />
-            </div>
-            <br />
+          <fieldset>
+            <legend>Contact Information</legend>
+            <div class="form-top">
+              <div class="input-section">
+                <label for="full-name">Full Name</label>
+                <input
+                  type="text"
+                  id="full-name"
+                  name="full-name"
+                  placeholder="Required"
+                />
+              </div>
+              <br />
 
-            <div class="input-section">
-              <label for="email" id="email">Email Address</label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                placeholder="Required"
-              />
-            </div>
-            <br />
+              <div class="input-section">
+                <label for="email">Email Address</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Required"
+                />
+              </div>
+              <br />
 
-            <div class="input-section">
-              <label for="phone">Phone Number</label>
-              <input type="tel" id="phone" name="user-phone" />
-            </div>
-            <br />
+              <div class="input-section">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="user-phone" />
+              </div>
+              <br />
 
-            <div class="input-section">
-              <label for="street-address">Street Address</label>
-              <input type="text" id="street-address" name="street-address" />
-            </div>
-            <br />
+              <div class="input-section">
+                <label for="street-address">Street Address</label>
+                <input type="text" id="street-address" name="street-address" />
+              </div>
+              <br />
 
-            <div class="input-section">
-              <label for="city">City</label>
-              <input type="text" id="city" name="city" />
-            </div>
-            <br />
+              <div class="input-section">
+                <label for="city">City</label>
+                <input type="text" id="city" name="city" />
+              </div>
+              <br />
 
-            <div class="input-section">
-              <label for="state">State</label>
-              <select id="state" name="state">
-                <option value="" disabled selected hidden>Choose State</option>
-                <option value="AL">Alabama</option>
-                <option value="AK">Alaska</option>
-                <option value="AZ">Arizona</option>
-                <option value="AR">Arkansas</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="DE">Delaware</option>
-                <option value="DC">District Of Columbia</option>
-                <option value="FL">Florida</option>
-                <option value="GA">Georgia</option>
-                <option value="HI">Hawaii</option>
-                <option value="ID">Idaho</option>
-                <option value="IL">Illinois</option>
-                <option value="IN">Indiana</option>
-                <option value="IA">Iowa</option>
-                <option value="KS">Kansas</option>
-                <option value="KY">Kentucky</option>
-                <option value="LA">Louisiana</option>
-                <option value="ME">Maine</option>
-                <option value="MD">Maryland</option>
-                <option value="MA">Massachusetts</option>
-                <option value="MI">Michigan</option>
-                <option value="MN">Minnesota</option>
-                <option value="MS">Mississippi</option>
-                <option value="MO">Missouri</option>
-                <option value="MT">Montana</option>
-                <option value="NE">Nebraska</option>
-                <option value="NV">Nevada</option>
-                <option value="NH">New Hampshire</option>
-                <option value="NJ">New Jersey</option>
-                <option value="NM">New Mexico</option>
-                <option value="NY">New York</option>
-                <option value="NC">North Carolina</option>
-                <option value="ND">North Dakota</option>
-                <option value="OH">Ohio</option>
-                <option value="OK">Oklahoma</option>
-                <option value="OR">Oregon</option>
-                <option value="PA">Pennsylvania</option>
-                <option value="RI">Rhode Island</option>
-                <option value="SC">South Carolina</option>
-                <option value="SD">South Dakota</option>
-                <option value="TN">Tennessee</option>
-                <option value="TX">Texas</option>
-                <option value="UT">Utah</option>
-                <option value="VT">Vermont</option>
-                <option value="VA">Virginia</option>
-                <option value="WA">Washington</option>
-                <option value="WV">West Virginia</option>
-                <option value="WI">Wisconsin</option>
-                <option value="WY">Wyoming</option>
-              </select>
-            </div>
+              <div class="input-section">
+                <label for="state">State</label>
+                <select id="state" name="state">
+                  <option value="" disabled selected hidden>
+                    Choose State
+                  </option>
+                  <option value="AL">Alabama</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="CT">Connecticut</option>
+                  <option value="DE">Delaware</option>
+                  <option value="DC">District Of Columbia</option>
+                  <option value="FL">Florida</option>
+                  <option value="GA">Georgia</option>
+                  <option value="HI">Hawaii</option>
+                  <option value="ID">Idaho</option>
+                  <option value="IL">Illinois</option>
+                  <option value="IN">Indiana</option>
+                  <option value="IA">Iowa</option>
+                  <option value="KS">Kansas</option>
+                  <option value="KY">Kentucky</option>
+                  <option value="LA">Louisiana</option>
+                  <option value="ME">Maine</option>
+                  <option value="MD">Maryland</option>
+                  <option value="MA">Massachusetts</option>
+                  <option value="MI">Michigan</option>
+                  <option value="MN">Minnesota</option>
+                  <option value="MS">Mississippi</option>
+                  <option value="MO">Missouri</option>
+                  <option value="MT">Montana</option>
+                  <option value="NE">Nebraska</option>
+                  <option value="NV">Nevada</option>
+                  <option value="NH">New Hampshire</option>
+                  <option value="NJ">New Jersey</option>
+                  <option value="NM">New Mexico</option>
+                  <option value="NY">New York</option>
+                  <option value="NC">North Carolina</option>
+                  <option value="ND">North Dakota</option>
+                  <option value="OH">Ohio</option>
+                  <option value="OK">Oklahoma</option>
+                  <option value="OR">Oregon</option>
+                  <option value="PA">Pennsylvania</option>
+                  <option value="RI">Rhode Island</option>
+                  <option value="SC">South Carolina</option>
+                  <option value="SD">South Dakota</option>
+                  <option value="TN">Tennessee</option>
+                  <option value="TX">Texas</option>
+                  <option value="UT">Utah</option>
+                  <option value="VT">Vermont</option>
+                  <option value="VA">Virginia</option>
+                  <option value="WA">Washington</option>
+                  <option value="WV">West Virginia</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+              </div>
 
-            <div class="input-section">
-              <label for="zip-code" id="input-zip">Zip Code</label>
-              <input type="text" id="zip-code" name="zip-code" />
+              <div class="input-section">
+                <label for="zip-code" id="input-zip">Zip Code</label>
+                <input type="text" id="zip-code" name="zip-code" />
+              </div>
             </div>
-          </div>
+          </fieldset>
 
           <div class="border-line-2"></div>
 
-          <h2>Newsletter</h2>
-          <p>Select the newsletters you would like to receive</p>
+          <!-- <h2>Newsletter</h2> -->
+          <fieldset>
+            <legend>Newsletter</legend>
+            <p>Select the newsletters you would like to receive</p>
 
-          <div class="form-bottom">
-            <input type="checkbox" id="html-news" name="html-news" />
-            <label for="html-news">HTML News</label><br />
+            <div class="form-bottom">
+              <input type="checkbox" id="html-news" name="html-news" />
+              <label for="html-news">HTML News</label><br />
 
-            <input type="checkbox" id="css-news" name="css-news" />
-            <label for="css-news">CSS News</label><br />
+              <input type="checkbox" id="css-news" name="css-news" />
+              <label for="css-news">CSS News</label><br />
 
-            <input
-              type="checkbox"
-              id="javascript-news"
-              name="javascript-news"
-            />
-            <label for="javascript-news">Javascript News</label>
+              <input
+                type="checkbox"
+                id="javascript-news"
+                name="javascript-news"
+              />
+              <label for="javascript-news">Javascript News</label>
 
-            <p>Newsletter format</p>
+              <p>Newsletter format</p>
 
-            <input type="radio" id="html" name="html" />
-            <label for="html">HTML</label><br />
+              <input type="radio" id="html" name="html-plain" />
+              <label for="html">HTML</label><br />
 
-            <input type="radio" id="plain-text" name="plain-text" />
-            <label for="plain-text">Plain text</label>
+              <input type="radio" id="plain-text" name="html-plain" />
+              <label for="plain-text">Plain text</label>
 
-            <p>Other topics you'd like to hear about</p>
-            <label for="topics"></label>
-            <textarea id="topics" name="topics"></textarea><br />
+              <label for="topics" class="topics"
+                >Other topics you'd like to hear about</label
+              >
+              <textarea id="topics" name="topics"></textarea><br />
 
-            <button type="submit" class="button">Sign Up</button>
-          </div>
+              <button type="submit" class="button">Sign Up</button>
+            </div>
+          </fieldset>
         </form>
       </div>
 
